<?xml version="1.0"?>
<package format="2">
  <name>quintic_polynomials_planner_ros</name>
  <version>1.0.0</version>
  <description>The quintic_polynomials_planner_ros package</description>

  <maintainer email="ie5630jk@gmail.com">OkDoky</maintainer>
  <author email="ie5630jk@gmail.com">OkDoky</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cmake_modules</exec_depend>

  <export>
    <cpp cflags="`pkg-config --cflags eigen3` -I${prefix}/include `rosboost-cfg --cflags`" 

         lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lplanning_models"/>
  </export>
</package>
